--- a/entropy-placeholder/index-4.html
+++ b/entropy-placeholder/index-4.html
@@ -25,9 +25,6 @@
 
 <div class="page-wrapper">
 
-  <!-- Preloader -->
-  <div class="preloader"></div>
-
   <!-- Main Header-->
   <header class="main-header header-style-three">
 
@@ -299,13 +296,28 @@
   </section>
   <!-- End Intelligence Section -->
 
+
+  <!--Installation Section-->
+  <section class="clients-section">
+    <div class="sec-title text-center">
+      <h2>It's Free and <span>Open Source</span></h2>
+    </div>
+    <div class="text-center">
+      <p>Get started by downloading a pre-build Docker Image - it is only 35Mb!</p>
+      <code class="code">docker pull generall/qdrant</code>
+      <p>Take a look a tour through our [Quick Start Guide]<br>
+        or build your first neural search wit out step-by-step [Tutorial]</p>
+    </div>
+  </section>
+  <!--End Installation Section-->
+
   <!-- Business Section Two -->
   <section class="business-section-two">
     <div class="pattern-layer" style="background-image: url(images/background/pattern-11.png)"></div>
     <div class="auto-container">
       <!-- Sec Title -->
       <div class="sec-title centered">
-        <h2><span>Use Cases \ Examples</span> For Your Business</h2>
+        <h2>Use Cases and Examples For <span>Your Business</span></h2>
         <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
           sollicitudin. Maecenas a imperdiet <br> libero, ac congue orci. Pellentesque et erat id leo tincidunt aliquam.
         </div>
@@ -350,8 +362,12 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
                           sollicitudin. Maecenas a imperdiet libero, ac congue orci.</p>
                         <ul class="business-list mb-5">
-                          <li>WHAT: Replace old-school text search with modern neural-based approach. Use semantic embeddings instead of keywords.</li>
-                          <li>WHY: Increase search recall, allow users to search even for short texts with which no keywords match.</li>
+                          <li>WHAT: Replace old-school text search with modern neural-based approach. Use semantic
+                            embeddings instead of keywords.
+                          </li>
+                          <li>WHY: Increase search recall, allow users to search even for short texts with which no
+                            keywords match.
+                          </li>
                           <li>HOW: With pre-trained neural network and Qdrant vector search engine</li>
                         </ul>
                         <a href="#" class="theme-btn btn-style-four"><span class="txt">Demo</span></a>
@@ -385,9 +401,11 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
                           sollicitudin. Maecenas a imperdiet libero, ac congue orci.</p>
                         <ul class="business-list mb-5">
-                          <li>WHAT: Build a visual food discovery application. Search food nearby </li>
-                          <li>WHY: Creates a new approach to discover restaurants and cafes. Enables a whole new dimension of food discovery</li>
-                          <li>HOW: With pre-trained ResNet154 + Qdrant recommendation API + Qdrant geo-filters. </li>
+                          <li>WHAT: Build a visual food discovery application. Search food nearby</li>
+                          <li>WHY: Creates a new approach to discover restaurants and cafes. Enables a whole new
+                            dimension of food discovery
+                          </li>
+                          <li>HOW: With pre-trained ResNet154 + Qdrant recommendation API + Qdrant geo-filters.</li>
                         </ul>
                         <a href="#" class="theme-btn btn-style-four"><span class="txt">Demo</span></a>
                         <a href="#" class="theme-btn btn-style-four"><span class="txt">Tutorial</span></a>
@@ -420,7 +438,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
                           sollicitudin. Maecenas a imperdiet libero, ac congue orci.</p>
                         <ul class="business-list mb-5">
-                          <li>WHAT: Suggest an additional goods based on client interactions - purchases, viewed pages or other activities</li>
+                          <li>WHAT: Suggest an additional goods based on client interactions - purchases, viewed pages
+                            or other activities
+                          </li>
                           <li>WHY: Increase basket size, sell more shit</li>
                           <li>HOW: Train custom LightFM + Qdrant recommendation API</li>
                         </ul>
@@ -453,6 +473,27 @@
   </section>
   <!-- End Business Section -->
 
+  <!--Clients Section-->
+  <section class="clients-section my-5">
+    <div class="sec-title text-center">
+      <h2>Who uses <span>Qdrant</span>?</h2>
+    </div>
+    <div class="auto-container">
+      <div class="sponsors-outer">
+        <!--Sponsors Carousel-->
+        <ul class="sponsors-carousel owl-carousel owl-theme">
+          <li class="slide-item">
+            <figure class="image-box"><a href="#"><img src="https://via.placeholder.com/300x115" alt=""></a></figure>
+          </li>
+          <li class="slide-item">
+            <figure class="image-box"><a href="#"><img src="https://via.placeholder.com/300x115" alt=""></a></figure>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </section>
+  <!--End Clients Section-->
 
   <!-- End Projects Section Two -->
   <section class="projects-section-two" style="background-image: url(images/background/pattern-9.png)">
@@ -460,7 +501,9 @@
       <!-- Sec Title -->
       <div class="sec-title centered">
         <h2>Our Latest <span>Articles</span></h2>
-        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu sollicitudin. Maecenas a im-<br>perdiet libero, ac congue orci. Pellentesque et erat id leo tincidunt aliquam.</div>
+        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
+          sollicitudin. Maecenas a im-<br>perdiet libero, ac congue orci. Pellentesque et erat id leo tincidunt aliquam.
+        </div>
       </div>
       <div class="row clearfix">
 
@@ -469,11 +512,13 @@
           <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
             <div class="block-content">
               <div class="image">
-                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt="" /></a>
+                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt=""/></a>
               </div>
               <div class="lower-content">
                 <h5><a href="blog-detail.html">Metric Learning</a></h5>
-                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu sollicitudin ac congue orci.</div>
+                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
+                  sollicitudin ac congue orci.
+                </div>
                 <a href="blog-detail.html" class="theme-btn learn-btn"><span class="txt">Learn More</span></a>
               </div>
             </div>
@@ -485,11 +530,13 @@
           <div class="inner-box wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
             <div class="block-content">
               <div class="image">
-                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt="" /></a>
+                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt=""/></a>
               </div>
               <div class="lower-content">
                 <h5><a href="blog-detail.html">Vector Search Tutorial</a></h5>
-                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu sollicitudin ac congue orci.</div>
+                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
+                  sollicitudin ac congue orci.
+                </div>
                 <a href="blog-detail.html" class="theme-btn learn-btn"><span class="txt">Learn More</span></a>
               </div>
             </div>
@@ -501,11 +548,13 @@
           <div class="inner-box wow fadeInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
             <div class="block-content">
               <div class="image">
-                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt="" /></a>
+                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt=""/></a>
               </div>
               <div class="lower-content">
                 <h5><a href="blog-detail.html">Filterable HNSW</a></h5>
-                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu sollicitudin ac congue orci.</div>
+                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
+                  sollicitudin ac congue orci.
+                </div>
                 <a href="blog-detail.html" class="theme-btn learn-btn"><span class="txt">Learn More</span></a>
               </div>
             </div>
@@ -596,15 +645,21 @@
           <div class="inner-column">
             <!-- Sec Title -->
             <div class="sec-title">
-              <h2>These Numbers Can Tell You <br> More <span>About Our Services</span></h2>
-              <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
-                sollicitudin ac congue orci.
-              </div>
+              <h2>Get in <span>touch</span></h2>
+              <div class="text">Not sure how Qdrant can be useful for you? Ask us!</div>
             </div>
-            <a href="contact.html" class="theme-btn btn-style-four"><span class="txt">Get Started</span></a>
-            <a href="about.html" class="theme-btn btn-style-five"><span class="txt">Know More</span></a>
+            <!-- Newsletter Form -->
+            <div class="newsletter-form">
+              <form method="post" action="contact.html">
+                <div class="form-group">
+                  <input type="email" name="email" value="" placeholder="Enter Your Email" required="">
+                  <button type="submit" class="theme-btn btn-style-one"><span class="txt">Send</span></button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
+
 
       </div>
     </div>
