--- a/entropy-placeholder/index-4.html
+++ b/entropy-placeholder/index-4.html
@@ -75,7 +75,7 @@
                       <li><a href="comming-soon.html">Comming Soon</a></li>
                     </ul>
                   </li>
-                  <li><a href="services.html">Services</a></li>
+                  <li><a href="documentation.html">Documentation</a></li>
                   <li class="dropdown"><a href="#">Blog</a>
                     <ul>
                       <li><a href="blog.html">Blog</a></li>
