some responsivennes fixes

--- a/entropy-placeholder/index-4.html
+++ b/entropy-placeholder/index-4.html
@@ -92,7 +92,7 @@
             </nav>
 
             <div class="outer-box">
-              <a class="btn btn-lg mt-1" href="https://github.com/qdrant/qdrant" target="_blank" title="github"><i class="flaticon flaticon-github"></i></a>
+              <a class="btn btn-lg mt-1" href="https://github.com/qdrant/qdrant" target="_blank" title="github"><i class="icon flaticon-github"></i></a>
             </div>
 
           </div>
@@ -338,17 +338,17 @@
             <ul class="tab-btns tab-buttons clearfix">
               <li data-tab="#prod-diabetes" class="tab-btn active-btn wow fadeInLeft" data-wow-delay="0ms"
                   data-wow-duration="1500ms">
-                <h5>Neural<br>Text Search</h5>
+                <h5>Neural <br>Text Search</h5>
                 <i class="icon flaticon-paper"></i>
               </li>
               <li data-tab="#prod-sales" class="tab-btn wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
-                <h5>Image Search -<br>food discovery</h5>
+                <h5>Image Search - <br>food discovery</h5>
                 <i class="icon flaticon-image-1"></i>
 
               </li>
               <li data-tab="#prod-education" class="tab-btn wow fadeInRight" data-wow-delay="0ms"
                   data-wow-duration="1500ms">
-                <h5>Recommendations<br>with conditions</h5>
+                <h5>Recommendations <br>with conditions</h5>
                 <i class="icon flaticon-advertising"></i>
               </li>
             </ul>
@@ -363,7 +363,7 @@
 
                     <!-- Content Column -->
                     <div class="content-column col-lg-6 col-md-12 col-sm-12">
-                      <div class="inner-column">
+                      <div class="inner-column mb-5">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
                           sollicitudin. Maecenas a imperdiet libero, ac congue orci.</p>
                         <ul class="business-list mb-5">
