an icons font update, documentation page fixes

--- a/entropy-placeholder/documentation.html
+++ b/entropy-placeholder/documentation.html
@@ -42,7 +42,7 @@
 
           <div class="nav-outer clearfix">
             <!--Mobile Navigation Toggler-->
-            <div class="mobile-nav-toggler"><span class="icon flaticon-menu"></span></div>
+            <div class="mobile-nav-toggler"><i class="icon flaticon-menu"></i></div>
             <!-- Main Menu -->
             <nav class="main-menu show navbar-expand-md">
               <div class="navbar-header">
@@ -92,8 +92,7 @@
             </nav>
 
             <div class="outer-box">
-              <a class="btn btn-lg mt-1" href="https://github.com/qdrant/qdrant" target="_blank" title="github"><i
-                      class="flaticon flaticon-github"></i></a>
+              <a class="btn btn-lg mt-1" href="https://github.com/qdrant/qdrant" target="_blank" title="github"><i class="icon flaticon-github"></i></a>
             </div>
 
           </div>
@@ -137,7 +136,7 @@
     <div class="auto-container pt-5">
       <div class="row clearfix">
         <!-- Side Menu -->
-        <nav class="col-lg-3 col-md-3 col-3 mt-4 position-relative">
+        <nav class="col-lg-3 col-md-3 col-12 mt-4 position-relative">
           <div id="accordion" class="sticky-top">
             <div class="link-group active">
               <div class="link-group-heading" id="headingOne">
@@ -215,7 +214,7 @@
         </nav>
         <!-- End Side Menu -->
 
-        <article class="col-lg-8 col-md-8 col-8 pb-5">
+        <article class="col-lg-8 col-md-8 col-12 pb-5">
           <h1>Collapsible Group Item #1</h1>
           <p>Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast yardarm. Pinnace holystone mizzenmast
             quarter crow's nest nipperkin grog yardarm hempen halter furl. Swab barque interloper chantey doubloon
