--- a/entropy-placeholder/index-4.html
+++ b/entropy-placeholder/index-4.html
@@ -42,7 +42,7 @@
 
           <div class="nav-outer clearfix">
             <!--Mobile Navigation Toggler-->
-            <div class="mobile-nav-toggler"><span class="icon flaticon-menu"></span></div>
+            <div class="mobile-nav-toggler"><i class="icon flaticon-menu"></i></div>
             <!-- Main Menu -->
             <nav class="main-menu show navbar-expand-md">
               <div class="navbar-header">
