--- a/entropy-doc/index.html
+++ b/entropy-doc/index.html
@@ -6,7 +6,7 @@
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
-<link href="css/scrollbar.css" rel="stylesheet">
+<link href="css/scrollbar.css" rel="stylesheet"> haha
 <!-- Responsive -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
